# cmakeQuickStart

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNER  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  add.cpp  add.hpp  jsonExample.cpp  jsonExample.hpp
scripts/: clean.sh  exec.sh  execClang.sh  execNinja.sh
scripts/cmake/: README.md  catch2Test.cmake  compilerWarnings.cmake  depPckg.cmake  nativePckg.cmake  updateSubmodule.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  addTest.cpp
